[FIX] the problem with z-index in the Header

--- a/src/app/components/Header/Header.scss
+++ b/src/app/components/Header/Header.scss
@@ -71,9 +71,6 @@
   }
 
   .dropdown {
-    &.open {
-    }
-
     &.close {
       display: none;
     }
